--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -8,5 +8,6 @@
     border: 1px solid gray;
     align-items: center;
     justify-content: center;
-    border-radius: 5%;
+    border-radius: 5px;
+    background-color: #fff;
 }
