--- a/src/containers/PinPad/PinPad.css
+++ b/src/containers/PinPad/PinPad.css
@@ -7,7 +7,7 @@
     margin: auto;
     margin-top: 10rem;
 
-    width: 20vw;
+    width: 20rem;
     background-color: #eee;
     border-radius: 2px;
     box-shadow: 0px 18px 47px -8px rgba(0,0,0,0.35);
